# rustwc

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
