[package]
name = "rustwc"
version = "0.1.0"
edition = "2024"
description = "A Rust clone of the BSD wc program"
authors = ["Cline"]
license = "MIT"
homepage = "https://github.com/theross/rustwc"
repository = "https://github.com/theross/rustwc"

[package.metadata.deb]
maintainer = "Cline"
copyright = "2025, Cline"
extended-description = "A Rust implementation of the BSD wc (word count) program"
depends = "$auto"
section = "utils"
priority = "optional"
assets = [
    ["target/release/rustwc", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/rustwc/README.md", "644"],
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/rustwc", dest = "/usr/bin/rustwc", mode = "755" },
    { source = "README.md", dest = "/usr/share/doc/rustwc/README.md", mode = "644" },
]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
unicode-segmentation = "1.10"
